--- a/src/config/conf/css_config/background_colors.css
+++ b/src/config/conf/css_config/background_colors.css
@@ -8,10 +8,8 @@
     background: var(--default-color-white);
     color: var(--foreground);
     overflow: auto;
-    height: min(100dvh, 750px);
+    height: auto;
     display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
 .chat_page { 
